css/wishlist.css
@import '/css/mystyles.css';

.active-wishlist{
  background-color: #7de2d1;
}

.button-container{
  min-width:203px;
}

.wish-image{
  max-height: 128px;
  max-width: 128px;
  width: auto;
  height: auto;
  position: absolute;
  top: 50%;
  transform: translate(0, -50%);
}

.wish-image-container{
  display:flex;
  justify-content: center;
  height: 128px;
  width: 128px;
  overflow: hidden;
  position: relative;
}

.wish{
  position:relative;
}

.wish:hover{
  position: relative;
  top: -1px;
  left: -1px;
  box-shadow: 0 0 10px 3px #7de2d1;
}

.subtitle{
  position: relative;
}

.tooltiptext{
  visibility: hidden;
  background-color: #7f8888;
  opacity: 80%;
  color: #fff;
  text-align: left;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  top: 100%;
  left: 0%;
}
.subtitle:hover .tooltiptext{
  visibility: visible;
}

#create-new-wishlist:hover, #add-an-idea:hover, #edit-wishlist:hover, .button:hover, li:hover{
  box-shadow: 0 0 5px 1px #7de2d1;
}

#create-new-wishlist, #add-an-idea, #edit-wishlist, li{
  border-radius: 5px;
}

#wishes, #wishlists{
  height: 100vh;
  padding: 10px;
  overflow-y: auto;
  scrollbar-width: none;
}

#bottom-placeholder{
  height: 400px;
}

